--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div style="flex: 4;">
             <h1>
                 <img src="https://tse1-mm.cn.bing.net/th/id/OIP-C.gC9s-RAqIiJKRRpA08RG5AAAAA?rs=1&pid=ImgDetMain"
+                    width="500px"
                     alt="">
             </h1>
         </div>
