--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         * {
-            border: 1px solid black;
+            border: 1px solid #cccccc;
         }
 
         body {
