--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body {
+            margin: 0;
+            height: 100vh;
+            background-color: #eee;
+        }
+
+        .border-gray {
+            border: 1px solid #cccccc;
+            /* 灰色边框 */
+        }
+
+        h1 {
+            margin: 20px;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body style="display: flex;">
+    <!-- 侧边栏 -->
+    <div class="border-gray" style="width: 300px; display: flex; flex-direction: column;">
+        <div class="border-gray" style="flex: 1;">
+            <h1>前情提要</h1>
+        </div>
+        <div class="border-gray" style="flex: 1;">
+            <h1>爬虫步骤</h1>
+        </div>
+        <div class="border-gray" style="flex: 1;">
+            <h1>爬虫结果</h1>
+        </div>
+        <div class="border-gray" style="flex: 1;">
+            <h1>安全运行</h1>
+        </div>
+    </div>
+    <!-- 主区域 -->
+    <div class="border-gray" style="display: flex; flex-direction: column; flex: 1; ">
+        <div class="border-gray" style="flex: 1;">
+            <h1>原爬虫知乎程序,获取结果不完整,正在更新</h1>
+        </div>
+        <div class="border-gray" style="flex: 4;">
+            <div style="display: flex; flex-direction: column;">
+                <a href="个人.html" target="_blank">我的网页1</a>
+                <a href="各种标签.html" target="_blank">我的网页2</a>
+                <a href="布局.html" target="_blank">我的网页3</a>
+                <a href="布局2.html" target="_blank"
+                    style="background-image: url(https://thumbs.dreamstime.com/z/pretty-young-russian-model-12145153.jpg?ct=jpeg);width: 800px;height: 90vh;">我的网页4</a>
+
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
