--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
         </div>
         <div class="border-gray" style="flex: 4;">
             <div style="display: flex; flex-direction: column;">
+                <button id="dzs" onclick="dianZan()">0</button>
+                <script>
+                    function dianZan() {
+                        let dianZanShuBiaoQian = window.document.getElementById('dzs');
+                        let dianZanShu = parseInt(dianZanShuBiaoQian.innerText);
+                        let xinShuZi = dianZanShu + 1;
+                        dianZanShuBiaoQian.innerText = xinShuZi;
+                        return
+
+                    }
+                </script>
                 <a href="个人.html" target="_blank">我的网页1</a>
                 <a href="各种标签.html" target="_blank">我的网页2</a>
                 <a href="布局.html" target="_blank">我的网页3</a>
